hphp/test/slow/type_annotation/shape_typedef_with_question_mark.php.expectf
Fatal error: An expression is expected here. in %s/test/slow/type_annotation/shape_typedef_with_question_mark.php on line 3